fixed overflow of tower modal

--- a/src/app/bullpen/bullpen.component.css
+++ b/src/app/bullpen/bullpen.component.css
@@ -26,3 +26,11 @@
     flex-flow: column;
     flex-wrap: wrap;
 }
+
+.modal-dialog{
+    overflow-y: initial;
+}
+.modal-body{
+    max-height: 500px;
+    overflow-y: auto;
+}
